# bardic

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
bardic-cli/: Cargo.toml
bardic-cli/src/: main.rs
bardic-core/: Cargo.toml
bardic-core/src/: commands.rs  lib.rs  playback.rs  player.rs
bardic-daemon/: Cargo.toml
bardic-daemon/src/: main.rs
bardic-gui/: Cargo.toml
bardic-gui/src/: main.rs
bardic-ipc/: Cargo.toml
bardic-ipc/src/: lib.rs
