[workspace]
members = [
	"bardic-core",
	"bardic-cli",
	"bardic-gui"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Joel Hulander<joel.hulander@gmail.com>"]
license = "MIT"
description = "Audio management tool"

[workspace.dependencies]
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.226", features = ["derive"] }
