[package]
name = "bardic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Bardic"

[dependencies]
bardic-core = { path = "../bardic-core" }
bardic-ipc = { path = "../bardic-ipc" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
